# gpu-driver-learning

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CURRICULUM.md  Features.cmake  PREREQUISITES.md  README.md  vcpkg.json
apps/: CMakeLists.txt
apps/gpu_app_mock_dumbfb/: CMakeLists.txt  README.md
apps/gpu_app_mock_dumbfb-lesson1-done/: CMakeLists.txt  README.md
apps/gpu_app_mock_dumbfb-lesson1-done/src/: gpu_app_mock_dumbfb-lesson1-done.cpp
apps/gpu_app_mock_dumbfb/src/: gpu_app_mock_dumbfb.cpp
apps/gpu_app_mock_dumbfb/test/: CMakeLists.txt  gpu_app_mock_dumbfb_tests.cpp
cmake/: Dependencies.cmake
lessons/lesson-1/: lesson-1.md
lessons/lesson-2/: lesson-2.md
libs/: CMakeLists.txt
libs/gpu_lib_mock_dumbfb/: CMakeLists.txt
libs/gpu_lib_mock_dumbfb/backends/glfw/: CMakeLists.txt  glfw_display.cpp  glfw_display.h  glfw_registrar.cpp
libs/gpu_lib_mock_dumbfb/backends/sdl3/: CMakeLists.txt  sdl3_display.cpp  sdl3_display.h  sdl3_registrar.cpp
libs/gpu_lib_mock_dumbfb/include/pixelgpu/: display_factory.h  display_params.h  idisplay.h  resolution.h
libs/gpu_lib_mock_dumbfb/include_c/pgpu/: pgpu.h
libs/gpu_lib_mock_dumbfb/src/: backend_registry.cpp  backend_registry.h  c_api.cpp  display_factory.cpp  resolution_presets.cpp
libs/gpu_lib_mock_dumbfb/test/: CMakeLists.txt  gpu_lib_mock_dumbfb_tests.cpp  test_factory.cpp  test_resolution.cpp
libs/gpu_lib_mock_dumbfb/test/constexpr/: CMakeLists.txt  gpu_lib_mock_dumbfb_constexpr_tests.cpp
